--- a/src/App.css
+++ b/src/App.css
@@ -1,38 +1,50 @@
-.App {
+body {
+  font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, Oxygen,
+    Ubuntu, Cantarell, "Open Sans", "Helvetica Neue", sans-serif;
+  margin: 0;
+}
+/* Login */
+.login {
+  max-width: 600px;
+  margin: auto;
+}
+.login p {
+  color: gray;
+}
+.login h1 {
+  color: blueviolet;
+  font-weight: 400;
+  font-size: 3.5rem;
+  letter-spacing: 1px;
+  margin-bottom: -5px;
+}
+.login-form {
+  display: grid;
   text-align: center;
+  margin-top: 30%;
 }
-
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
+.login-form input {
+  height: 45px;
+  margin: 5px 0;
+  border-radius: 5px;
+  outline: none;
+  border: 1px solid gray;
+  background-color: white;
+  padding: 5px;
+  outline: none;
 }
-
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
-}
-
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
+.login-form button {
+  background-color: blueviolet;
   color: white;
+  height: 45px;
+  margin: 10px 0;
+  border-style: none;
+  font-size: 1rem;
+  letter-spacing: 1px;
+  padding: 10px;
+  border-radius: 5px;
 }
-
-.App-link {
-  color: #61dafb;
-}
-
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+.login a {
+  text-decoration: none;
+  color: blueviolet;
 }
