--- a/src/App.css
+++ b/src/App.css
@@ -31,7 +31,6 @@ body {
   border: 1px solid gray;
   background-color: white;
   padding: 5px;
-  outline: none;
 }
 .login-form button {
   background-color: blueviolet;
@@ -47,4 +46,7 @@ body {
 .login a {
   text-decoration: none;
   color: blueviolet;
+}
+.error {
+  color: red;
 }
