--- a/src/App.css
+++ b/src/App.css
@@ -1,7 +1,9 @@
+html,
 body {
+  height: 100%;
+  margin: 0;
   font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, Oxygen,
     Ubuntu, Cantarell, "Open Sans", "Helvetica Neue", sans-serif;
-  margin: 0;
 }
 /* Login */
 .login {
@@ -12,7 +14,7 @@ body {
   color: gray;
 }
 .login h1 {
-  color: blueviolet;
+  color: rgb(208, 33, 224);
   font-weight: 400;
   font-size: 3.5rem;
   letter-spacing: 1px;
@@ -33,7 +35,7 @@ body {
   padding: 5px;
 }
 .login-form button {
-  background-color: blueviolet;
+  background-color: rgb(208, 33, 224);
   color: white;
   height: 45px;
   margin: 10px 0;
@@ -45,8 +47,130 @@ body {
 }
 .login a {
   text-decoration: none;
-  color: blueviolet;
+  color: rgb(208, 33, 224);
 }
 .error {
   color: red;
+}
+/* Navbar Styling */
+.Navbar {
+  background-color: rgb(246, 206, 248);
+  width: 200px;
+  color: rgb(208, 33, 224);
+  padding: 20px;
+}
+.Profile {
+  background-color: rgb(247, 165, 250);
+  padding: 20px;
+  margin: -20px;
+  text-align: center;
+}
+.Profile-image {
+  background-image: url("https://picsum.photos/536/354");
+  border-radius: 50%;
+  width: 100px;
+  height: 100px;
+  border: solid 2px rgb(224, 224, 224);
+}
+.Profile h3,
+h4 {
+  line-height: 2px;
+  color: rgb(233, 233, 233);
+  letter-spacing: 2px;
+}
+.Navlinks ul {
+  list-style: none;
+  text-align: center;
+  line-height: 100px;
+  margin-left: -14px;
+}
+.Navlinks li {
+  color: rgb(208, 33, 224);
+  font-size: 1.3rem;
+}
+/* Home Styling */
+/* @media screen and (max-width: 480px) {
+  .Card {
+    width: 200px;
+    height: 150px;
+    font-size: 1rem;
+  }
+} */
+.Home {
+  background-color: rgb(248, 231, 250);
+  height: 100%;
+}
+.Home h1 {
+  color: rgb(208, 33, 224);
+  text-align: center;
+  margin-top: 40px;
+
+  font-size: 2.5rem;
+  letter-spacing: 5px;
+}
+.Card {
+  display: flex;
+  width: 300px;
+  height: 150px;
+  color: white;
+  margin: 30px;
+  background-color: rgb(208, 33, 224);
+  font-size: 1.8rem;
+  justify-content: center;
+  align-items: center;
+  border-radius: 30px 0 50px 0;
+  box-shadow: 2px 2px 20px 2px #dddbdb;
+  border-style: outset;
+  border-color: rgb(221, 211, 211);
+}
+
+.content {
+  display: flex;
+  flex-wrap: wrap;
+  align-items: center;
+  justify-content: center;
+  height: 73vh;
+}
+.Home button {
+  background-color: rgb(208, 33, 224);
+  color: white;
+  width: 150px;
+  height: 45px;
+  margin: 30px 50%;
+  border-style: none;
+  font-size: 1.5rem;
+  letter-spacing: 1px;
+  padding: 10px;
+  border-radius: 5px;
+}
+/* Album Styling */
+.Album {
+  background-color: rgb(248, 231, 250);
+  height: 100vh;
+}
+.Album h1 {
+  color: rgb(208, 33, 224);
+  text-align: center;
+  font-size: 2.5rem;
+  letter-spacing: 5px;
+}
+.Album-list {
+  list-style: none;
+  display: flex;
+  justify-content: center;
+  background-color: white;
+  width: 50%;
+  height: 50px;
+  margin: auto;
+  box-shadow: 2px 2px 2px 2px #dddbdb;
+}
+.Album-list span {
+  background-color: rgb(208, 33, 224);
+  color: white;
+  border-radius: 50%;
+}
+.Album-list li {
+  font-size: 1.3rem;
+  padding: 0 5px;
+  margin: 10px 5px 10px 10px;
 }
