--- a/src/App.css
+++ b/src/App.css
@@ -53,36 +53,11 @@ body {
   color: red;
 }
 /* Navbar Styling */
-.Navbar {
-  background-color: rgb(246, 206, 248);
-  width: 200px;
-  color: rgb(208, 33, 224);
-  padding: 20px;
-}
-.Profile {
-  background-color: rgb(247, 165, 250);
-  padding: 20px;
-  margin: -20px;
-  text-align: center;
-}
-.Profile-image {
-  background-image: url("https://picsum.photos/536/354");
-  border-radius: 50%;
-  width: 100px;
-  height: 100px;
-  border: solid 2px rgb(224, 224, 224);
-}
-.Profile h3,
-h4 {
-  line-height: 2px;
-  color: rgb(233, 233, 233);
-  letter-spacing: 2px;
-}
+
 .Navlinks ul {
   list-style: none;
   text-align: center;
   line-height: 100px;
-  margin-left: -14px;
 }
 .Navlinks li {
   color: rgb(208, 33, 224);
@@ -96,15 +71,35 @@ h4 {
     font-size: 1rem;
   }
 } */
-.Home {
-  background-color: rgb(248, 231, 250);
+.Dashboard {
   height: 100%;
+}
+.dashcontent {
+  margin-left: 210px;
+}
+.chart {
+  display: flex;
+}
+.earning {
+  background-color: violet;
+  margin-bottom: 20px;
+  width: 200px;
+  height: 100px;
+  padding: 20px;
+  color: white;
+}
+.earning h3 {
+  color: green;
+  margin: 0 auto;
+}
+.earning h6,
+h5 {
+  margin: 0 auto;
 }
 .Home h1 {
   color: rgb(208, 33, 224);
   text-align: center;
   margin-top: 40px;
-
   font-size: 2.5rem;
   letter-spacing: 5px;
 }
