--- a/src/App.css
+++ b/src/App.css
@@ -76,15 +76,21 @@ body {
 }
 .dashcontent {
   margin-left: 210px;
+  width: 100%;
 }
 .chart {
   display: flex;
+  margin-top: 20px;
 }
+.graph {
+  margin-left: 20px;
+}
+
 .earning {
   background-color: violet;
   margin-bottom: 20px;
-  width: 200px;
-  height: 100px;
+  width: 250px;
+  height: 150px;
   padding: 20px;
   color: white;
 }
