--- a/src/Components/Navbar/Navbar.css
+++ b/src/Components/Navbar/Navbar.css
@@ -23,9 +23,14 @@
   font-family: "Gill Sans", "Gill Sans MT", Calibri, "Trebuchet MS", sans-serif;
   letter-spacing: 2px;
 }
-.navlinks li {
-  padding: 0 0 0 20px;
-}
+
 .navlinks a {
   color: white;
+  padding: 20px;
+  font-size: 1.2rem;
+}
+.Logo {
+  font-size: 2.5rem;
+  color: white;
+  padding: 10px;
 }
