--- a/src/App.css
+++ b/src/App.css
@@ -4,54 +4,10 @@ body {
   margin: 0;
   font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, Oxygen,
     Ubuntu, Cantarell, "Open Sans", "Helvetica Neue", sans-serif;
+  background-color: #444444;
 }
 /* Login */
-.login {
-  max-width: 600px;
-  margin: auto;
-}
-.login p {
-  color: gray;
-}
-.login h1 {
-  color: rgb(208, 33, 224);
-  font-weight: 400;
-  font-size: 3.5rem;
-  letter-spacing: 1px;
-  margin-bottom: -5px;
-}
-.login-form {
-  display: grid;
-  text-align: center;
-  margin-top: 30%;
-}
-.login-form input {
-  height: 45px;
-  margin: 5px 0;
-  border-radius: 5px;
-  outline: none;
-  border: 1px solid gray;
-  background-color: white;
-  padding: 5px;
-}
-.login-form button {
-  background-color: rgb(208, 33, 224);
-  color: white;
-  height: 45px;
-  margin: 10px 0;
-  border-style: none;
-  font-size: 1rem;
-  letter-spacing: 1px;
-  padding: 10px;
-  border-radius: 5px;
-}
-.login a {
-  text-decoration: none;
-  color: rgb(208, 33, 224);
-}
-.error {
-  color: red;
-}
+
 /* Navbar Styling */
 
 .Navlinks ul {
@@ -71,37 +27,7 @@ body {
     font-size: 1rem;
   }
 } */
-.Dashboard {
-  height: 100%;
-}
-.dashcontent {
-  margin-left: 210px;
-  width: 100%;
-}
-.chart {
-  display: flex;
-  margin-top: 20px;
-}
-.graph {
-  margin-left: 20px;
-}
 
-.earning {
-  background-color: violet;
-  margin-bottom: 20px;
-  width: 250px;
-  height: 150px;
-  padding: 20px;
-  color: white;
-}
-.earning h3 {
-  color: green;
-  margin: 0 auto;
-}
-.earning h6,
-h5 {
-  margin: 0 auto;
-}
 .Home h1 {
   color: rgb(208, 33, 224);
   text-align: center;
