--- a/src/Song/Song.css
+++ b/src/Song/Song.css
@@ -58,3 +58,60 @@
   height: 30px;
   border-radius: 20px;
 }
+
+.container {
+  background-color: #807e7e;
+  border-radius: 10px;
+  display: inline-block;
+  position: relative;
+  margin-bottom: 12px;
+
+  cursor: pointer;
+
+  -webkit-user-select: none;
+  -moz-user-select: none;
+  -ms-user-select: none;
+  user-select: none;
+  padding: 5px 30px;
+  height: 30px;
+}
+.song-genre input {
+  position: absolute;
+  opacity: 0;
+  cursor: pointer;
+}
+
+.checkmark {
+  position: absolute;
+  top: 2px;
+  left: 5px;
+  right: 5px;
+  height: 20px;
+  width: 20px;
+  background-color: #5c5b5b;
+  border-radius: 50%;
+  padding: 10px;
+}
+
+.container input:checked ~ .checkmark {
+  background-color: rgb(208, 33, 224);
+}
+
+.checkmark:after {
+  content: "";
+  position: absolute;
+  display: none;
+}
+
+.container input:checked ~ .checkmark:after {
+  display: inline-block;
+}
+
+/* .container .checkmark:after {
+  top: 9px;
+  left: 9px;
+  width: 8px;
+  height: 8px;
+  border-radius: 50%;
+  background: white;
+} */
