--- a/src/Song/Song.css
+++ b/src/Song/Song.css
@@ -65,7 +65,7 @@
 
 .container {
   background-color: #807e7e;
-  color: white;
+
   border-radius: 10px;
   display: inline-block;
   position: relative;
@@ -125,6 +125,9 @@
   text-align: center;
   margin-top: 50px;
 }
+.preview-content img {
+  margin-bottom: 50px;
+}
 .preview-content button {
   background-color: blueviolet;
   border-style: none;
@@ -138,14 +141,18 @@
   text-align: right;
 }
 .song-preview {
-  margin-top: 50px;
   background-color: #5c5b5b;
   display: grid;
   padding: 30px;
-
+  margin: auto;
   width: 400px;
   height: 200px;
 }
 .song-preview span {
   margin-left: 20px;
+}
+.song-form input {
+  color: white;
+  padding: 5px;
+  outline: none;
 }
