--- a/src/App.css
+++ b/src/App.css
@@ -1,10 +1,11 @@
 html,
 body {
-  height: 100%;
   margin: 0;
   font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, Oxygen,
     Ubuntu, Cantarell, "Open Sans", "Helvetica Neue", sans-serif;
   background-color: #444444;
+  height: 100%;
+  width: 100%;
 }
 /* Login */
 
