--- a/src/Dashboard/Dashboard.css
+++ b/src/Dashboard/Dashboard.css
@@ -3,7 +3,9 @@
   width: 100%;
 }
 .dashcontent {
+  margin: auto;
   margin-left: 270px;
+  max-width: 800px;
 }
 .dashcontent h4 {
   color: white;
@@ -26,9 +28,37 @@
 }
 .earning h3 {
   color: rgb(2, 155, 2);
+
   margin: 0 auto;
 }
 .earning h6,
 h5 {
   margin: 0 auto;
+}
+@media screen and (max-width: 600px) {
+  .dashcontent {
+    max-width: 400px;
+    margin: auto;
+  }
+  .earning {
+    background-color: #5c5b5b;
+    margin-bottom: 20px;
+    width: 120px;
+    height: 90px;
+    padding: 5px;
+    color: white;
+  }
+  .earning h3 {
+    color: rgb(2, 155, 2);
+    font-size: 1.3rem;
+    margin: 0 auto;
+  }
+  .earning h6 {
+    font-size: 0.9rem;
+    margin: 0 auto;
+  }
+  .earning h5 {
+    font-size: 1rem;
+    margin: 0 auto;
+  }
 }
