--- a/src/Album/Album.css
+++ b/src/Album/Album.css
@@ -10,10 +10,21 @@
   background-color: #807e7e;
   width: 300px;
   padding: 10px;
-  position: fixed;
-  bottom: 0;
-  right: 0;
+  position: absolute;
+  top: 700px;
   margin: 50px;
+}
+.album-details {
+  margin-top: 20px;
+  display: grid;
+  text-align: center;
+  color: white;
+}
+.album-form input {
+  background-color: #5c5b5b;
+  border-style: none;
+  width: 400px;
+  height: 30px;
 }
 .add-song h3 {
   line-height: 15px;
@@ -21,24 +32,99 @@
   letter-spacing: 2px;
   font-size: 1.1rem;
 }
-.popup {
-  position: fixed;
-  background-color: #807e7e;
-  width: 100%;
-  height: 100vh;
-  top: 0;
-  left: 0;
+.popup-hidden {
+  display: none;
 }
-.box {
+.popup {
+  width: 600px;
   position: relative;
-  width: 70%;
-  margin: 0 auto;
-  height: auto;
-  max-height: 70vh;
-  margin-top: calc(100vh - 85vh - 20px);
-  background: #fff;
-  border-radius: 4px;
-  padding: 20px;
-  border: 1px solid #999;
-  overflow: auto;
+  top: -600px;
+}
+
+.container {
+  background-color: #807e7e;
+
+  border-radius: 10px;
+  display: inline-block;
+  position: relative;
+  margin-bottom: 12px;
+
+  cursor: pointer;
+
+  -webkit-user-select: none;
+  -moz-user-select: none;
+  -ms-user-select: none;
+  user-select: none;
+  padding: 5px 30px;
+  height: 30px;
+}
+.song-genre input {
+  position: absolute;
+  opacity: 0;
+  cursor: pointer;
+}
+
+.checkmark {
+  position: absolute;
+  top: 2px;
+  left: 5px;
+  right: 5px;
+  height: 20px;
+  width: 20px;
+  background-color: #5c5b5b;
+  border-radius: 50%;
+  padding: 10px;
+}
+
+.container input:checked ~ .checkmark {
+  background-color: rgb(208, 33, 224);
+}
+
+.checkmark:after {
+  content: "";
+  position: absolute;
+  display: none;
+}
+
+.container input:checked ~ .checkmark:after {
+  display: inline-block;
+}
+
+/* .album-cover input {
+  background-color: white;
+  width: 100px;
+  height: 100px;
+}
+.album-cover input::file-selector-button {
+  visibility: hidden;
+} */
+@media screen and (max-width: 600px) {
+  .album-content {
+    margin: auto;
+    max-width: 400px;
+    color: white;
+  }
+  .popup {
+    width: 400px;
+
+    position: fixed;
+    left: 0px;
+    top: 100px;
+  }
+  /* .song-form input {
+    background-color: #5c5b5b;
+    border-style: none;
+    width: 200px;
+    height: 30px;
+  }
+
+  .song-cover input {
+    background-color: white;
+    width: 150px;
+    height: 150px;
+    margin: auto 100px;
+  }
+  .song-cover input::file-selector-button {
+    visibility: hidden;
+  } */
 }
