--- a/src/Components/Sidebar/Sidebar.css
+++ b/src/Components/Sidebar/Sidebar.css
@@ -1,24 +1,25 @@
 .Sidebar {
   background-color: #5c5b5b;
   width: 200px;
-  position: fixed;
-  overflow: auto;
+  float: left;
+  /* position: fixed; */
+  /* overflow: auto; */
 }
-.Profile {
+.SideProfile {
   background-color: rgb(208, 33, 224);
   padding: 20px;
   text-align: center;
 }
 
-.Profile-image img {
+.SideProfile-image img {
   width: 100px;
   height: 100px;
   border-radius: 50%;
   border: solid 5px white;
 }
-.Profile h3,
+.SideProfile h3,
 h4 {
-  line-height: 2px;
+  line-height: 15px;
   color: rgb(255, 255, 255);
   font-family: "Gill Sans", "Gill Sans MT", Calibri, "Trebuchet MS", sans-serif;
   letter-spacing: 2px;
